[gd_scene load_steps=2 format=3 uid="uid://bgpy5ovhtdrvx"]

[ext_resource type="Script" path="res://game_over.gd" id="1_ixswl"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1277.0
offset_bottom = 721.0
script = ExtResource("1_ixswl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 120.0
offset_right = 892.0
offset_bottom = 325.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 368.0
offset_right = 827.0
offset_bottom = 553.0
theme_override_constants/separation = 25
alignment = 1

[node name="PlayAgain" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="Quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="VBoxContainer2/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
